# rp2040-rp2350-freertos

./: CMakeLists.txt  compile-rp2040.sh  compile-rp2350.sh  exe-test-crc16.sh
2cores/: CMakeLists.txt  multicore.c
HCSR04/: CMakeLists.txt  HCSR04.cpp
crc-test/: cvtutils.c  main.c
doc/: RP2040_RP2350-FreeRTOS.odt  bookworm-errors.txt  build-steps-notes.txt  pico_and_pico2-openjpeg.odt  status-012225.txt
doc/openjpeg/: openjpeg-ultibo-qemu.txt
doc/rp2040/: Mutex.txt
doc/rp2040/2tasks/: 2tasks.txt
doc/rp2040/Scheduling/: Scheduling.txt
doc/rp2040/hello_freerots1/: hello_freertos1.txt
doc/rp2040/hello_freerots2/: hello_freertos2.txt
doc/rp2350/: Mutex.txt  mutex-without.txt
doc/rp2350/2tasks/: 2tasks.txt
doc/rp2350/Scheduling/: Scheduling.txt
doc/rp2350/hello_freerots1/: hello_freertos1.txt
doc/rp2350/hello_freerots2/: hello_freertos2.txt
doc/rp2350/pico-littlefs/: pico-littlefs-0-1-2.txt
first_pwm/: CMakeLists.txt  main.c
freertos/: CMakeLists.txt
freertos/2tasks/: 2tasks.c  CMakeLists.txt
freertos/Mutex/: CMakeLists.txt  Mutex.c
freertos/Scheduling/: CMakeLists.txt  main.c
freertos/Semaphore/: CMakeLists.txt  Semaphore.c
freertos/hello_freertos/: hello_freertos.c
freertos/test-read-crc16/: CMakeLists.txt  main.c
i2c/: CMakeLists.txt
i2c/lcd_1602_i2c/: CMakeLists.txt  lcd_1602_i2c.c
i2c/slave_i2c/: CMakeLists.txt  slave_i2c.c
i2c/slave_mem_i2c/: CMakeLists.txt
openjpeg/: CMakeLists.txt
openjpeg/openjpeg-lib/: dwtlift.c  dwtlift.h
pico-lifting-sf/: hello_usb.c
